Table produksi_guellotine {
  id bigint
  tanggal_produksi date
  kendala varchar
  created_at timestamp
  updated_at timestamp
}

Table pegawai_guellotine {
  id bigint
  id_produksi_guellotine bigint [ref: > produksi_guellotine.id]
  id_pegawai bigint
  masuk time
  pulang time
  tugas varchar
  ijin varchar
  ket varchar
  created_at timestamp
  updated_at timestamp
}

Table hasil_guellotine {
    id bigint
    id_produksi_guellotine bigint [ref: > produksi_guellotine.id]
    id_ukuran bigint
    id_jenis_kayu bigint
    jumlah int
    no_palet int
    created_at timestamp
    updated_at timestamp
}

Table validasi_guellotine {
    id bigint
    id_produksi_guellotine bigint [ref: > produksi_guellotine.id]
    role varchar
    status varchar
    created_at timestamp
    updated_at timestamp
}